Ribbon load balancer actived and tested

--- a/CryptoAdvertising/src/main/resources/application.properties
+++ b/CryptoAdvertising/src/main/resources/application.properties
@@ -2,8 +2,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cryptoads?useSSL=false
 spring.datasource.username=mysql
 spring.datasource.password=password
-spring.main.allow-bean-definition-overriding=true
-server.servlet.context-path = /api
 
-server.port = 0
+spring.main.allow-bean-definition-overriding=true
+
 spring.application.name=CryptoAdvertising
+
+server.servlet.context-path = /api
+server.port = 0
+
+eureka.instance.instance-id= ${spring.application.name}:${spring.application.instance_id:${random.value}}
