--- a/CryptoWallets/src/main/resources/application.properties
+++ b/CryptoWallets/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.main.allow-bean-definition-overriding=true
 server.servlet.context-path = /api
 server.port = 0
 spring.application.name=CryptoWallets
+
+eureka.instance.instance-id= ${spring.application.name}:${spring.application.instance_id:${random.value}}
