--- a/CryptOffer/pom.xml
+++ b/CryptOffer/pom.xml
@@ -22,6 +22,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<oauth2.version>2.3.3.RELEASE</oauth2.version>
+		<jwt.version>1.0.9.RELEASE</jwt.version>
 	</properties>
 
 	<dependencies>
@@ -91,9 +93,29 @@
 			<artifactId>CryptoAdvertising</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 	    </dependency>
+	    
+	    <!-- Security -->
+	    <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.security.oauth</groupId>
+		    <artifactId>spring-security-oauth2</artifactId>
+		    <version>${oauth2.version}</version>
+		</dependency>
+							    
+	    
 	    <dependency>
 		    <groupId>org.yaml</groupId>
 		    <artifactId>snakeyaml</artifactId>
+		</dependency>
+		
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
