--- a/CryptOffer/src/main/resources/application.properties
+++ b/CryptOffer/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cryptoffer?useSSL=false
+jdbc.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cryptoffer?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=mysql
 spring.datasource.password=password
 spring.main.allow-bean-definition-overriding=true
