--- a/CryptOffer/src/test/resources/application.properties
+++ b/CryptOffer/src/test/resources/application.properties
@@ -3,3 +3,15 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cryptowallet?useSSL=false
 spring.datasource.username=mysql
 spring.datasource.password=password
 spring.main.allow-bean-definition-overriding=true
+
+security.oauth2.resource.filter-order=3
+
+security.signing-key=MaYzkSjmkzPC57L
+security.security-realm=Spring Boot JWT Example Realm
+
+security.jwt.client-id=cryptoffer_client_id
+security.jwt.client-secret=cryptosecret
+security.jwt.grant-type=password
+security.jwt.scope-read=read
+security.jwt.scope-write=write
+security.jwt.resource-ids=cryptoffer_resourceid
