--- a/CryptoWallets/pom.xml
+++ b/CryptoWallets/pom.xml
@@ -6,7 +6,6 @@
 	<groupId>robii.io</groupId>
 	<artifactId>CryptoWallets</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
 
 	<name>CryptoWallets</name>
 	<description>My app with crypto wallets</description>
@@ -83,6 +82,12 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
